# t7

bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/: Bitcoin Puzzle Research Findings.md  Bitcoin Puzzle Solver - Final Delivery Summary.md  Bitcoin Puzzle Solver - vast.ai Deployment Guide.md  Cargo.toml  Mathematical Optimization Strategies for Bitcoin Puzzle Solving.md  analyze_puzzle_data.py  bitcoin_puzzle_data.csv  bitcoin_puzzle_solver.py  csv_key_manager.py  gpu_optimization.py  install.sh  lib.rs  security_module.py  simple_puzzle_analysis.py  test_complete_solution.py  test_puzzle_export.csv  test_report.json  todo.md  vast_ai_deployment.py
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/: Python Implementation.md
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/: COMPLETE_IMPLEMENTATION_GUIDE.md  DELIVERY_SUMMARY.md  PACKAGE_CONTENTS.md  QUICK_START.md  README.md
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/deployment/configs/: solver_config.toml
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/deployment/docker/: Dockerfile
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/deployment/scripts/: deploy_vastai.sh  start_solver.sh
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/docker/: Dockerfile
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/docs/: beginner_guide.md
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/python_gpu/: requirements.txt
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/python_gpu/src/: __init__.py
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/python_gpu/src/coordination/: system_coordinator.py
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/python_gpu/src/gpu_acceleration/: cuda_engine.py
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/python_gpu/src/ml_models/: hot_zone_predictor.py
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/python_gpu/src/statistical_analysis/: probabilistic_optimizer.py
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/rust_core/: Cargo.toml
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/rust_core/src/: lib.rs
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/rust_core/src/bsgs/: mod.rs
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/rust_core/src/crypto/: avx2_ops.rs  glv.rs  mod.rs
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/rust_core/src/ml_predictor/: mod.rs
bitcoin-puzzle-solver-rng-analysis-and-gpu-optimization/Bitcoin Puzzle Solver - Hybrid Rust/bitcoin_puzzle_solver/scripts/: deploy_vastai.sh  install.sh
