[package]
name = "bitcoin_puzzle_solver_rust_core"
version = "0.1.0"
edition = "2021"

[dependencies]
num-bigint = "0.4"
num-traits = "0.2"
rand = { version = "0.8", features = ["std"], default-features = false }
rand_chacha = "0.3"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = { version = "1.5", optional = true }
crossbeam = { version = "0.8", optional = true }
sha2 = "0.10"
blake2 = "0.10"
ripemd160 = "0.9"
bs58 = "0.4"
secp256k1 = { version = "0.27", features = ["rand", "recovery"] }
num_cpus = "1.0"

# Security features
aes-gcm = { version = "0.10", optional = true }
chacha20poly1305 = { version = "0.10", optional = true }
zeroize = { version = "1.4", optional = true }
secrecy = { version = "0.8", optional = true }

# Python bindings
pyo3 = { version = "0.20", features = ["extension-module"], optional = true }

[features]
default = []
parallel = ["rayon", "crossbeam"]
security = ["aes-gcm", "chacha20poly1305", "zeroize", "secrecy"]
python = ["pyo3"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
name = "bitcoin_puzzle_solver_rust_core"
crate-type = ["cdylib", "rlib"]

